--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
-#.properties? ????? ?? ??
-#.yml ?? yaml? ?? ???? ???? ??
+  #.properties 계층구조 중복 발생
+#yml, yaml을 통해 들여쓰기 계층구조 사용
 
-#port ?? ???. default? 8080
-#server:
-#  port: 8081
+#port 번호 변경 (default 8080)
+  #server:
+ # port: 8081
 
 
 #DB ?? - ????? driver? ??
@@ -13,3 +13,7 @@ spring:
     url: jdbc:mariadb://localhost:3306/basic
     username: root
     password: 1234
+
+#어느 폴더 밑의 어느 파일
+mybatis:
+  mapper-locations: classpath://mapper/**/*.xml
