--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
 	//jstl 문법을 사용하기 위한 의존성 추가
 	implementation 'javax.servlet:jstl'
+
+	//swagger을 위한 의존성 추가
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
