--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@
 #yml, yaml을 통해 들여쓰기 계층구조 사용
 
 #port 번호 변경 (default 8080)
-  #server:
- # port: 8081
+server:
+  port: 8080
 
 
 #DB ?? - ????? driver? ??
@@ -32,7 +32,7 @@ spring:
      #update 옵션은  변경사항만 alter를 적용하고 기존의 데이터 유지 -> 변경사항 중에 주로 추가사항만 반영하고 삭제나 수정은 반영안된는 경우도 있음
      #validate 옵션은 실제 DB와의 차이만 check -> 반영 안한다. -> 실무에선 validate 많이 함.
      #--> 초반에는 create하다가 스키마가 확정되면 update로 변경하기
-     ddl-auto: create
+     ddl-auto: update
    #콘솔창에 ddl, dml문을 출력하여 보여주는 옵션 -> 실무에선 false로 둠.(너무 많은 sql출력)
    show_sql: true
 
